--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             <li>Vulnerability Assessments</li>
             <li>Outsourced CISO Services</li>
             <li>Penetration Testing</li>
-            <li class="colourButton">Contact</li>
+            <li class="contactButton">Contact</li>
         </nav>
     </header>
 
     <main>
 
         <div class="banner">
-            <img id="logo" src="./images/calogo.png">
+            <img id="logoFingerprint" src="./images/cyber-ASSURE fingerprint.png">
+            <img id="logoText" src="./images/cyber-ASSURE text.png">
             <img src="./images/hero.jpg" alt="">
         </div>
 
@@ -38,6 +39,7 @@
                                 technology, compliance and audit teams to develop and
                                 lead an information security program to prevent, detect, mitigate, and
                                 recover from cyber related incidents.</p>
+                            <button>Take a look</button>
                         </div>
                     </div>
                 </div>
@@ -49,6 +51,7 @@
                             <p>Identifying weakness in a system,
                                 application or network that could be subject
                                 to explotation or misuse.</p>
+                            <button>Take a look</button>
                         </div>
                         <img src="./images/assessmentIcon.svg" alt="Assessment Icon">
                     </div>
@@ -60,6 +63,7 @@
                             <h2>Cloud Architecture Security</h2>
                             <p>Best practices design review including network access, network conficuration,
                                 network segmentation, protection, monitoring and event management.</p>
+                            <button>Take a look</button>
                         </div>
                         <img src="./images/cloudIcon.svg" alt="Assessment Icon">
 
@@ -71,6 +75,7 @@
                         <div class="text">
                             <h2>Incident Response</h2>
                             <p>Define a Cybersecurity Incident Response Plan </p>
+                            <button>Take a look</button>
                         </div>
                         <img src="./images/planIcon.svg">
                     </div>
