--- a/main/index.html
+++ b/main/index.html
@@ -12,21 +12,21 @@
 
 <body>
     <header>
-        <!-- <img id="navButton" onclick="openMenu()" src="../images/mobileMenu.svg"> -->
+        <!-- <img id="navButton" onclick="openMenu()" src="./images/mobileMenu.svg"> -->
         <nav id="siteNav">
              <!-- <li><a href="index.html">Vulnerability Assessments</a></li> -->
              <!-- <li><a href="index.html">Outsourced CISO Services</a></li> -->
              <!-- <li><a href="index.html">Penetration Testing</a></li> -->
             <li class="contactButton"><a href="index.html">Contact</a></li>
         </nav>
-        <img id="logoFingerprint" src="../images/logos/cyber-ASSURE fingerprint blue.png">
-        <img id="logoText" src="../images/logos/cyber-ASSURE text blue.png">
+        <img id="logoFingerprint" src="./images/logos/cyber-ASSURE fingerprint blue.png">
+        <img id="logoText" src="./images/logos/cyber-ASSURE text blue.png">
     </header>
 
     <main>
 
         <div class="banner">
-            <img src="../images/hero.jpg">
+            <img src="./images/hero.jpg">
             <h1>Cyber-Assure</h1>
             <h2>Technology</h2>
         </div>
@@ -44,7 +44,7 @@
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolder">
-                        <img src="../images/OutsourceCISO.jpg">
+                        <img src="./images/OutsourceCISO.jpg">
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolder">
-                        <img src="../images/VunrabilityAssessments.jpg" alt="Assessment Icon">
+                        <img src="./images/VunrabilityAssessments.jpg" alt="Assessment Icon">
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolder">
-                        <img src="../images/CloudSecurity.jpg" alt="Assessment Icon">
+                        <img src="./images/CloudSecurity.jpg" alt="Assessment Icon">
                     </div>
 
 
@@ -91,7 +91,7 @@
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolder">
-                        <img src="../images/IncidentResponse.jpg">
+                        <img src="./images/IncidentResponse.jpg">
                     </div>
 
                 </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="imgHolder">
 
-                        <img src="../images/ThirdParty.jpg">
+                        <img src="./images/ThirdParty.jpg">
                     </div>
 
                 </div>
@@ -124,7 +124,7 @@
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolder">
-                        <img src="../images/SecurityAwareness.jpg">
+                        <img src="./images/SecurityAwareness.jpg">
                     </div>
                 </div>
             </div>
