--- a/main/index.html
+++ b/main/index.html
@@ -14,10 +14,10 @@
     <header>
         <!-- <img id="navButton" onclick="openMenu()" src="./images/mobileMenu.svg"> -->
         <nav id="siteNav">
-             <!-- <li><a href="index.html">Vulnerability Assessments</a></li> -->
-             <!-- <li><a href="index.html">Outsourced CISO Services</a></li> -->
-             <!-- <li><a href="index.html">Penetration Testing</a></li> -->
-            <li class="contactButton"><a href="index.html">Contact</a></li>
+            <!-- <li><a href="index.html">Vulnerability Assessments</a></li> -->
+            <!-- <li><a href="index.html">Outsourced CISO Services</a></li> -->
+            <!-- <li><a href="index.html">Penetration Testing</a></li> -->
+            <li class="contactButton"><a href="index.html">Work with us</a></li>
         </nav>
         <img id="logoFingerprint" src="./images/logos/cyber-ASSURE fingerprint blue.png">
         <img id="logoText" src="./images/logos/cyber-ASSURE text blue.png">
@@ -28,14 +28,26 @@
         <div class="banner">
             <img src="./images/hero.jpg">
             <h1>Cyber-Assure</h1>
-            <h2>Technology</h2>
+            <h2>Technology</h2>   
+
+      
         </div>
+        
+           <div class="qualifications">
+                <div class="qual"><h3>World Class Secruity Experts</h2></div>
+                <div class="borderLine"></div>
+                <div class="qual"><h3>Decades of Experience</h2></div>
+                <div class="borderLine"></div>
+                <div class="qual">
+                    <img src="./images/logos/isc2_cissp2.png">
+                </div>
+            </div>
 
         <div class="cardsHolder">
             <div class="card">
 
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textLeft">
                         <h2>Outsourced CISO Services</h2>
                         <p>Cyber-Assure technology executives are experienced in working alongside internal
                             technology, compliance and audit teams to develop and
@@ -43,7 +55,7 @@
                             recover from cyber related incidents.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderRight">
                         <img src="./images/OutsourceCISO.jpg">
                     </div>
                 </div>
@@ -51,7 +63,7 @@
 
             <div class="card">
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textRight">
                         <h2>Vulnerability Assessments</h2>
                         <p>Gain a perspective on potential weakness in a system, application or network that could be
                             subject
@@ -60,7 +72,7 @@
                             pose an unacceptable risk to your business. </p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderLeft">
                         <img src="./images/VunrabilityAssessments.jpg" alt="Assessment Icon">
                     </div>
                 </div>
@@ -68,13 +80,13 @@
 
             <div class="card">
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textLeft">
                         <h2>Cloud Architecture Security</h2>
                         <p>Best practices design review including network access, network conficuration,
                             network segmentation, protection, monitoring and event management.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderRight">
                         <img src="./images/CloudSecurity.jpg" alt="Assessment Icon">
                     </div>
 
@@ -84,13 +96,13 @@
 
             <div class="card">
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textRight">
                         <h2>Incident Response</h2>
                         <p>Define a Cybersecurity Incident Response Plan that aligns with existing
                             disaster reover and business contiunity plans.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderLeft">
                         <img src="./images/IncidentResponse.jpg">
                     </div>
 
@@ -99,14 +111,14 @@
 
             <div class="card">
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textLeft">
                         <h2>Third-Party assessments</h2>
                         <p>Ensure that all vendors or links in your supply chain are reliable,
                             reputable orgnisations that disclose their security practices to their business partners.
                         </p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderRight">
 
                         <img src="./images/ThirdParty.jpg">
                     </div>
@@ -116,23 +128,22 @@
 
             <div class="card">
                 <div class="cardContent">
-                    <div class="text">
+                    <div class="textRight">
                         <h2>Security Awareness training</h2>
                         <p>All users of IT are the first line of defence in ensuring a secure enterprise.
                             Cyber-Assure can help develop and implement ongoing security awareness training and
                             education to protect against common threats such as phishing and ransomware attacks.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
-                    <div class="imgHolder">
+                    <div class="imgHolderLeft">
                         <img src="./images/SecurityAwareness.jpg">
                     </div>
                 </div>
             </div>
-
         </div>
-        </div>
-
     </main>
+
+    <footer>Cyber-Assure Technology 2022 &copy </footer>
     <script src="./js/javascript.js"></script>
 </body>
 
