--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
     <title>Cyber-Assure Technology</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
 <body>
     <header>
-        <!-- <img id="navButton" onclick="openMenu()" src="./images/mobileMenu.svg"> -->
         <nav id="siteNav">
-            <!-- <li><a href="index.html">Vulnerability Assessments</a></li> -->
-            <!-- <li><a href="index.html">Outsourced CISO Services</a></li> -->
-            <!-- <li><a href="index.html">Penetration Testing</a></li> -->
-            <li class="contactButton"><a href="index.html">Work with us</a></li>
+            <li class="contactButton"><a href="contact.html">Work with us</a></li>
         </nav>
-        <img id="logoFingerprint" src="./images/logos/cyber-ASSURE fingerprint blue.png">
-        <img id="logoText" src="./images/logos/cyber-ASSURE text blue.png">
+        <a href="index.html"><img id="logoFingerprint" src="./images/logos/cyber-ASSURE fingerprint blue.png"></a>
+        <a href="index.html"><img id="logoText" src="./images/logos/cyber-ASSURE text blue.png"></a>
     </header>
 
     <main>
@@ -36,11 +32,12 @@
            <div class="qualifications">
                 <div class="qual"><h3>World Class Secruity Experts</h2></div>
                 <div class="borderLine"></div>
-                <div class="qual"><h3>Decades of Experience</h2></div>
-                <div class="borderLine"></div>
                 <div class="qual">
                     <img src="./images/logos/isc2_cissp2.png">
-                </div>
+                </div>  
+                <div class="borderLine"></div>
+                <div class="qual"><h3>Decades of Experience</h2></div>
+              
             </div>
 
         <div class="cardsHolder">
@@ -142,9 +139,8 @@
             </div>
         </div>
     </main>
-
-    <footer>Cyber-Assure Technology 2022 &copy </footer>
-    <script src="./js/javascript.js"></script>
+<footer>Cyber-Assure Technology 2022 &copy </footer>
+    
 </body>
 
 
