--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cyber-Assure Technology</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/contact.css">
@@ -30,8 +31,8 @@
         </div>
 
         <div id="contact">
-            <h3>For general enquiries, please email us at:</h3>
-            <h4><a href="mailto:mathew.stephens@cyber-assure.co.uk">mathew.stephens@cyber-assure.co.uk</a></h4>
+            <h3>Please email us at:</h3>
+            <h4><a href="mailto:info@cyber-assure.co.uk">info@cyber-assure.co.uk</a></h4>
         </div>
 
 
