--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Cyber-Assure Technology</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 
 <body>
     <header>
@@ -30,7 +30,7 @@
         </div>
         
            <div class="qualifications">
-                <div class="qual"><h3>World Class Secruity Experts</h2></div>
+                <div class="qual"><h3>World Class Security Experts</h2></div>
                 <div class="borderLine"></div>
                 <div class="qual">
                     <img src="./images/logos/isc2_cissp2.png">
@@ -47,7 +47,7 @@
                     <div class="textLeft">
                         <h2>Outsourced CISO Services</h2>
                         <p>Cyber-Assure technology executives are experienced in working alongside internal
-                            technology, compliance and audit teams to develop and
+                            technology, compliance, and audit teams to develop and
                             lead an information security program to prevent, detect, mitigate, and
                             recover from cyber related incidents.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
@@ -64,7 +64,7 @@
                         <h2>Vulnerability Assessments</h2>
                         <p>Gain a perspective on potential weakness in a system, application or network that could be
                             subject
-                            to explotation or misuse. We'll use the findings to develop a roadmap for remidiating those
+                            to exploitation or misuse. We'll use the findings to develop a roadmap for remediating those
                             that
                             pose an unacceptable risk to your business. </p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
@@ -79,14 +79,13 @@
                 <div class="cardContent">
                     <div class="textLeft">
                         <h2>Cloud Architecture Security</h2>
-                        <p>Best practices design review including network access, network conficuration,
+                        <p>Best practices design review including network access, network configuration,
                             network segmentation, protection, monitoring and event management.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolderRight">
                         <img src="./images/CloudSecurity.jpg" alt="Assessment Icon">
                     </div>
-
 
                 </div>
             </div>
@@ -96,7 +95,7 @@
                     <div class="textRight">
                         <h2>Incident Response</h2>
                         <p>Define a Cybersecurity Incident Response Plan that aligns with existing
-                            disaster reover and business contiunity plans.</p>
+                            disaster recovery and business continuity plans.</p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
                     <div class="imgHolderLeft">
@@ -111,7 +110,7 @@
                     <div class="textLeft">
                         <h2>Third-Party assessments</h2>
                         <p>Ensure that all vendors or links in your supply chain are reliable,
-                            reputable orgnisations that disclose their security practices to their business partners.
+                            reputable organisations that disclose their security practices to their business partners.
                         </p>
                         <!-- <nav><a href="./index.html">Take a look</a></nav> -->
                     </div>
@@ -119,7 +118,7 @@
 
                         <img src="./images/ThirdParty.jpg">
                     </div>
-
+	
                 </div>
             </div>
 
@@ -143,5 +142,5 @@
     
 </body>
 
-
 </html>
+
