--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         </div>
         
            <div class="qualifications">
-                <div class="qual"><p>World Class Security Experts</p></div>
+                <div class="qual"><p>World Class Experts</p></div>
                 <div class="borderLine"></div>
                 <div class="qual">
-                    <img src="./images/logos/isc2_cissp2.png">
+                    <p>Decades of Experience</p>
                 </div>  
                 <div class="borderLine"></div>
-                <div class="qual"><p>Decades of Experience</p></div>
+                <div class="qual">
+                    <p>Top Certifications</p>
+                  </div>
               
             </div>
 
